add button, change html and css

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,14 @@
   <div class="container">
     <div class="container-input">
       <label for="input">Enter Abstract Syntax Tree</label>
-      <input type="text" id="input" class="input" placeholder="Enter Abstract Syntax Tree...">
+      <textarea id="input" class="input" placeholder="Enter Abstract Syntax Tree...">
     </div>
 
     <div class="container-output">
-      <h2>HTML string</h2>
-      <p class="output"></p>
+      <h2>
+        <button id="button"> Convert AST to HTML string</button>
+      </h2>
+      <p class="output output-visibility"></p>
     </div>
   </div>
 
